--- a/src/app/components/mirrors/mirrors.component.css
+++ b/src/app/components/mirrors/mirrors.component.css
@@ -1,87 +1,87 @@
 .container {
-    display: flex;
-    justify-content: space-between;
-    background-color: #f5f5dc;
-    border-bottom: 1px solid #000;
-    padding: 30px;
+  display: flex;
+  justify-content: space-between;
+  background-color: #f5f5dc;
+  border-bottom: 1px solid #000;
+  padding: 30px;
 }
 
 .mirrors {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .mirrors__item {
-    width: 25%;
-    height: 350px;
-    position: relative;
-    overflow: hidden;
+  width: 25%;
+  height: 350px;
+  position: relative;
+  overflow: hidden;
 }
 
 .mirrors__item:hover .mirrors__content {
-    opacity: 1;
+  opacity: 1;
 }
 
 .mirrors__img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    z-index: 1;
-    transform: translate3d(-50%, -50%, 0);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  transform: translate3d(-50%, -50%, 0);
 }
 
 .mirrors__content {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-    opacity: 0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    background: rgb(60, 60, 60, .7);
-    cursor: pointer;
-    transition: opacity .4s ease;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  background: rgb(60, 60, 60, 0.7);
+  cursor: pointer;
+  transition: opacity 0.4s ease;
 }
 
 .item__form {
-    display: flex;
-    flex-direction: column;
-    transition: opacity 1s ease;
+  display: flex;
+  flex-direction: column;
+  transition: opacity 1s ease;
 }
 
 input {
-    width: 300px;
-    font-size: 13px;
-    padding: 5px 0 5px 15px;
-    border: 1px solid #747474;
-    background: #F6F6f6;
-    border-radius: 3px;
-    margin: 5px 0;
+  width: 300px;
+  font-size: 13px;
+  padding: 5px 0 5px 15px;
+  border: 1px solid #747474;
+  background: #f6f6f6;
+  border-radius: 3px;
+  margin: 5px 0;
 }
 
 button {
-    width: 300px;
-    border: 0;
-    border-radius: 5px;
-    background: #7d9ad5;
-    color: #fff;
-    padding: 5px 15px;
-    font-size: 13px;
-  }
+  width: 300px;
+  border: 0;
+  border-radius: 5px;
+  background: #7d9ad5;
+  color: #fff;
+  padding: 5px 15px;
+  font-size: 13px;
+}
 
-  button:hover {
-    background: #3d61af;
-  }
-  
-  button:focus {
-    outline: none;
-    box-shadow: 0 0 0 4px #a9abaf;
-  }
+button:hover {
+  background: #3d61af;
+}
 
-  .personal__info {
-    margin-top: 15px;
-  }
+button:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px #a9abaf;
+}
+
+.personal__info {
+  margin-top: 15px;
+}
